# whisper-dictate

./: .flake8  README.md  pyproject.toml  whisper-dictate.py
src/whisper_dictate/: cli.py
