[tool.poetry]
name = "whisper_dictate"
version = "0.3.0"
description = "Dictate using whisper and type so you don't have to."
authors = ["Alan Descoins <alan@tryolabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
pynput = "^1.7.7"
pyperclip = "^1.9.0"
openai = "^1.35.3"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ruff = "^0.4.10"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["UP", "PERF", "SIM", "I", "B", "N", "S", "PGH"]

[tool.poetry.scripts]
wdic = "whisper_dictate.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
